Se ajusta el api con los controladores, modelos y rutas para la adhesion de la relacion de niveles, el migrations ya se realizo tambien #39
