# swagger/swagger.json
@@ -707,6 +707,155 @@
                 }
             }
         },
+        "/relacion_nivel/": {
+            "get": {
+                "tags": [
+                    "relacion_nivel"
+                ],
+                "description": "get SRelacionNivel",
+                "operationId": "RelacionNivelController.Get All",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "description": "Fields returned. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortby",
+                        "description": "Sorted-by fields. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.RelacionNivel"
+                        }
+                    },
+                    "404": {
+                        "description": "not found resource"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "relacion_nivel"
+                ],
+                "description": "create RelacionNivel",
+                "operationId": "RelacionNivelController.Post",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for RelacionNivel content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.RelacionNivel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{int} models.RelacionNivel"
+                    },
+                    "400": {
+                        "description": "the request contains incorrect syntax"
+                    }
+                }
+            }
+        },
+        "/relacion_nivel/{id}": {
+            "get": {
+                "tags": [
+                    "relacion_nivel"
+                ],
+                "description": "get RelacionNivel by id",
+                "operationId": "RelacionNivelController.Get One",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.RelacionNivel"
+                        }
+                    },
+                    "404": {
+                        "description": "not found resource"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "relacion_nivel"
+                ],
+                "description": "update the RelacionNivel",
+                "operationId": "RelacionNivelController.Put",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for RelacionNivel content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.RelacionNivel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.RelacionNivel"
+                        }
+                    },
+                    "400": {
+                        "description": "the request contains incorrect syntax"
+                    }
+                }
+            }
+        },
         "/subgrupo/": {
             "get": {
                 "tags": [
@@ -2160,7 +2309,7 @@
         }
     },
     "definitions": {
-        "51029.\u003cnil\u003e.Subgrupo": {
+        "55422.\u003cnil\u003e.Subgrupo": {
             "title": "Subgrupo",
             "type": "object"
         },
@@ -2298,6 +2447,31 @@
                 },
                 "SubgrupoId": {
                     "$ref": "#/definitions/models.Subgrupo"
+                }
+            }
+        },
+        "models.RelacionNivel": {
+            "title": "RelacionNivel",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "FechaCreacion": {
+                    "type": "string"
+                },
+                "FechaModificacion": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "NivelHijoId": {
+                    "$ref": "#/definitions/models.RelacionNivel"
+                },
+                "NivelPadreId": {
+                    "$ref": "#/definitions/models.RelacionNivel"
                 }
             }
         },
@@ -2475,7 +2649,7 @@
             "type": "object",
             "properties": {
                 "SubgrupoHijo": {
-                    "$ref": "#/definitions/51029.\u003cnil\u003e.Subgrupo"
+                    "$ref": "#/definitions/55422.\u003cnil\u003e.Subgrupo"
                 },
                 "SubgrupoPadre": {
                     "$ref": "#/definitions/models.Subgrupo"
@@ -2531,6 +2705,10 @@
         {
             "name": "tipo_nivel",
             "description": "TipoBienController operations for TipoBien\n"
+        },
+        {
+            "name": "relacion_nivel",
+            "description": "RelacionNivelController operations for RelacionNivel\n"
         },
         {
             "name": "tipo_bien",
